fix: https://github.com/dragonflyoss/nydus/issues/1697
